welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:28: error: not found: value poseBrosse
	poseBrosse();
        ^Array1:31: error: reassignment to val
	j = j+1;
          ^